# signalrgb-homeassistant

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  hacs.json  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: ci-cd.yml
custom_components/signalrgb/: __init__.py  config_flow.py  const.py  light.py  manifest.json  strings.json
custom_components/signalrgb/translations/: en.json
scripts/: release.py
tests/: __init__.py  conftest.py  test_config_flow.py  test_light.py
